# FM

./: .gitignore
7/: CMakeLists.txt
7/Demos/2019/: FM77AVDEMO_2019_YS_V3.D77  readme.txt
7/Demos/2019/src/: 2dtrans.asm  3ddata.asm  64color.asm  AV8B_2D.asm  AV8B_2D_LOD.asm  CMU_2D.asm  DM2019-0.srec  DM2019-1.srec  DM2019I.srec  DM2019L.srec  DM2019M.srec  F14_2D.asm  Hubble_Fuselage_2D.asm  Hubble_Panel_1.asm  Hubble_Panel_2.asm  afterburner.asm  analog_palette.asm  approach_earth.asm  asteroid.asm  asteroid_data.asm  bgm.asm  bgm0.asm  bgm1.asm  bgmjumptable.asm  bitmap.asm  bmp_galaxy45_96.asm  bmp_galaxy_96.asm  bmp_star_blue_16.asm  bmp_star_blue_8.asm  buildDemo2019.py  div16.asm  div8.asm  divtable.asm  dot8.asm  drawhorizon.asm  ducky.asm  ducky_2d.asm  earth_2d.asm  endtitle.asm  high_level_graphics.asm  (+58 more)
7/FM77AVKeyboard/: CMakeLists.txt  cheapFM77AVkeyboard.md  fm77avautotyping.cpp  fm77avkey.cpp  fm77avkeyboardemu.cpp  fm77avkeyboardemu.h  fm77avkeymap.cpp  fm77avrkana.cpp  main.cpp
7/FM77AVKeyboard/arduino/: gencode.cpp
7/FM77AVKeyboard/arduino/IREmitter/: IREmitter.ino
7/FM77AVKeyboard/arduino/Wired/: Wired.ino
7/FM77AVKeyboardRaspPI/: CMakeLists.txt  RaspPITransmit.cpp  fm77avkeymap.cpp  fm77avkeymap.h  main.cpp  readme.txt
7/KiCAD/FMSound/: 74LSxx_additional.lib  Amplifier_Operational_additional.lib  FMSoundGenerator-cache.lib  FMSoundGenerator.kicad_pcb  FMSoundGenerator.net  FMSoundGenerator.pro  FMSoundGenerator.sch  FMSoundGenerator.xml  FM_Operator.lib  fp-lib-table  sym-lib-table
7/KiCAD/FMSound/AudioConn.fplib/: RCA Female.kicad_mod
7/KiCAD/IRTransmitter_Arduino/: IRTransmitter-cache.lib  IRTransmitter.kicad_pcb  IRTransmitter.sch  fp-lib-table
7/KiCAD/IRTransmitter_RaspPI/: IRTransmitter-cache.lib  IRTransmitter.kicad_pcb  IRTransmitter.kicad_pcb-bak  IRTransmitter.sch  IRTransmitter.sch-bak
7/KiCAD/RS232C/: FM7-RS232C-cache.lib  FM7-RS232C-rescue.lib  FM7-RS232C.bak  FM7-RS232C.kicad_pcb  FM7-RS232C.kicad_pcb-bak  FM7-RS232C.net  FM7-RS232C.pro  FM7-RS232C.sch  FM7-RS232C.sch-bak  LineReceiverTransmitter.lib  fp-lib-table  i8251A_UART.kicad_mod  i8251A_UART.lib  sym-lib-table
7/KiCAD/RS232C/i8251A.pretty/: i8251A.kicad_mod
7/RaspPI/: CMakeLists.txt  RaspPITransmit.cpp  RaspPITransmit.h
7/autotype/: installBiosHookThenRun.bas
7/buildForRaspPI/: CMakeLists.txt  RaspPITransmit.cpp  readme.txt
7/patches/PolarStar3/: loader.bas  patch_tape.asm  patch_tape.srec  polar3_patch.t77  readme.md
7/samples/Joystick/: JSTEST.t77  read_joystick.asm  read_joystick.bas
7/samples/lzssDecomp/: lzssdec.asm
7/samples/mainSubTfr/: mainSubTfr.asm
7/util/: 000-D7CLIENT.0A0  001-D7CLIENM.2B0  CMakeLists.txt  build.py  makepackage.py  readme_e.txt  readme_j.txt
7/util/6809lib/: com0io.asm  com1io.asm  comio.asm  rs232c_recv.asm  rs232c_reset.asm  rs232c_send.asm
7/util/D77ToRS232C/: clientbin.cpp  d77server.cpp  diskimg.cpp
7/util/RS232CDiskBIOS/: CMakeLists.txt  disk_bios_hook_client.cpp  disk_bios_hook_client.h  disk_bios_hook_clientCOM1.cpp  disk_bios_hook_clientCOM1.h  main.cpp  override.asm  readme.txt  readme_e.txt
7/util/RS232CDiskBios/: CMakeLists.txt  disk_bios_hook_clientCOM1.cpp  install_and_reset.asm  main.cpp  override.asm  override_readonly.asm
7/util/RS232CTapeBIOS/: CMakeLists.txt  bioshook_buffered.asm  bioshook_buffered.cpp  bioshook_buffered.h  bioshook_bufferedCOM1.cpp  bioshook_bufferedCOM1.h  bioshook_install.asm  bioshook_small.asm  bioshook_small.cpp  bioshook_small.h  bioshook_smallCOM1.cpp  bioshook_smallCOM1.h  main.cpp  readme.txt
7/util/T77ToRS232C/: main.cpp
7/util/d77/: d77.cpp  d77.h  d77analyze.cpp
7/util/disk2tape/: formatdata.cpp
7/util/lib/: CMakeLists.txt
7/util/lib/yscomport/: CMakeLists.txt  comport_unix.cpp
7/util/rawReadToD77/: rawread.cpp
7/util/rawReadToRS232C/: rawread.fbas  readdisk.asm
7/util/rs232cLoader/: strloader.asm  strloader.cpp  strloader.h  strloaderCOM1.cpp  strloaderCOM1.h
7/util/t77/: t77.cpp  t77.h  t77load.cpp
TOWNS/CDIPLTFR/: CDIPLTFR.C  README.TXT
TOWNS/CONS31K/: CONS31K.ASM  CONS31K.COM  CRTC.ASM  CRTCCONS.ASM  MAKEFILE  README.TXT
TOWNS/DMCD/: DMCD.C  DMCD.EXP  DMCD.LN  MAKEFILE  README.TXT
TOWNS/FDDUMP/: FDDUMP.C  MAKEFILE  RDD2D77.C  README.TXT  REPAIRRDD.CPP  TEST.C
TOWNS/FDDUMPP/: ASM.ASM  FDDUMP.C  FDDUMP.EXP  MEM.ASM  Makefile
TOWNS/FDWRITE/: FDWRITE.C  MAKEFILE
TOWNS/FDWRITE2/: .gitignore  ASM.ASM  CONSOLE.C  CONSOLE.H  DEF.H  DISKIMG.C  DISKIMG.H  DMABUF.C  DMABUF.H  FDC.C  FDC.H  FDWRITE2.C  FDWRITE2.EXP  HC386OPT.HC  MAIN.C  MAKEFILE  PIC.C  PIC.H  TIMER.C  TIMER.H  UTIL.C  UTIL.H
TOWNS/IPL/: 386SX.ASM  BOOTMENU.ASM  BUFFERS.ASM  CDBOOT.ASM  CD_IPL.ASM  CMOSMENU.ASM  CMOSRST.ASM  CRTC.ASM  DEF.ASM  DRAWFONT.ASM  DRVMENU.ASM  FDIPLBAS.ASM  FD_IPL.ASM  FD_IPLM.ASM  GRAPHICS.ASM  HD_IPL.ASM  HD_IPL0.ASM  HID_IO.ASM  ICM_IPLM.ASM  INTCDRDY.ASM  INTRCEPT.ASM  IODEF.ASM  IOSYSINT.ASM  IPLDMENU.ASM  LOADER.ASM  LOADYSSC.ASM  MAINMENU.ASM  MAKEFILE  MEMBANK.ASM  MENU.ASM  PATCH.ASM  README.TXT  RS232MNU.ASM  SCSIUTIL.ASM  SUBSTIPL.ASM  TASK.BAT  TESTFONT.ASM  TESTIPL.ASM  TSUGARU.ASM  UI.ASM  (+8 more)
TOWNS/MAKED77/: ASM.ASM  XMEMSEND.C  maked77.c  makefile
TOWNS/MISCLIB/: RDHIGH.ASM  SERIAL.ASM  UNREAL.ASM
TOWNS/RDDUTIL/: RDDWriteEnable.c  RDDWriteProtect.c
TOWNS/REALDUMP/: realdump.c  realfind.c
TOWNS/RESOURCE/: AOMORI.ASM
TOWNS/RS232C/: RS232C.ASM  XMODEM.ASM
TOWNS/SCSILIB/: SCSIIO.ASM
TOWNS/SCTSTRDY/: SCTSTRDY.ASM
TOWNS/SNES2TOWNS/: README.MD  SNES2TOWNS.ino
TOWNS/SYSDRV/: README.TXT  SYSDRV.ASM
TOWNS/SYSINIW/: README.TXT  SYSINIW.ASM
TOWNS/WAITLIB/: WAIT.ASM
TOWNS/XMODEM/: .gitignore  DEBUG.C  DEBUG.H  LIBS.LN  MAKEFILE  RS232C32.ASM  TESTSEND.C  XMODEM.H  XMRECV.C  XMSEND.C  build.py
TOWNS/YSPING/: 386INT77.ASM  DOSBOX.BAT  DOSBOXAUTORUN  FMBUILD.BAT  IRQHNDL.ASM  README.TXT  RS232C.ASM  UT_INT77.ASM  YSPING.ASM  YSPING.SYS
TOWNS/YSSCSICD/: .gitignore  CONFIG.SYS  DATABUF.ASM  DEF.ASM  DOSBOXAUTORUN  FMBUILD.BAT  FMR_SCSI.ASM  FMR_TIMR.ASM  HOOKBIOS.ASM  (+26 more)
TOWNS/tests/: CMakeLists.txt  PADAPRESS5SEC.txt
(+144 files in other folders)
