cmake_minimum_required(VERSION 3.0)
project(FM7)

include_directories(imported/include)

add_subdirectory("lib/irtoy")
add_subdirectory("lib/cheaplib")
add_subdirectory("lib/cheapgui")
add_subdirectory("lib/ysgl/src")
add_subdirectory("lib/ysglcpp/src")
add_subdirectory("lib/ysglcpp/src/gl1")
add_subdirectory("lib/ysglcpp/src/gl2")
add_subdirectory("lib/ysclass/src")
add_subdirectory("lib/ysclass11/src")
add_subdirectory("lib/ysbitmapfont/src")
add_subdirectory("lib/fssimplewindow/src")
add_subdirectory("lib/fssimplefiledialog/src")
add_subdirectory("FM77AVKeyboard")
add_subdirectory("RomajiToKanaKey")
add_subdirectory("RS232CTest")
add_subdirectory("util")
