cmake_minimum_required(VERSION 3.18)
project(TOWNS_APP_TESTS)
enable_testing()


set(TSUGARU_EXE ${CMAKE_CURRENT_SOURCE_DIR}/../../../TOWNSEMU/build/main_cui/Tsugaru_CUI.exe)
set(ROM_HR ${CMAKE_CURRENT_SOURCE_DIR}/../../../TOWNSEMU_TEST/ROM_HR)
set(ROM_MX ${CMAKE_CURRENT_SOURCE_DIR}/../../../TOWNSEMU_TEST/ROM_MX)
set(ROM_2F ${CMAKE_CURRENT_SOURCE_DIR}/../../../TOWNSEMU_TEST/ROM_2F)
set(ISODIR /d/TownsISO)
set(TOSV11L10ISO ${ISODIR}/TOSV1.1L10SCSI.ISO)
set(TOSV21L20ISO ${ISODIR}/TOSV2.1L20SCSI.ISO)
set(TOSV21L31ISO ${ISODIR}/TOSV2.1L31SCSI.ISO)
set(CDIMAGE ${CMAKE_CURRENT_SOURCE_DIR}/../IPL/DISKIMG/CDIMAGE.ISO)
set(FDIMAGE ${CMAKE_CURRENT_SOURCE_DIR}/../IPL/DISKIMG/FDIMAGE.BIN)
set(BOOTSECTOR ${CMAKE_CURRENT_SOURCE_DIR}/../IPL/BOOTSECT/BOOTSECT.BIN)


add_executable(dummy dummy.c)


add_custom_command(
	OUTPUT ${TOSV11L10ISO} 
	DEPENDS ${BOOTSECTOR}
	COMMAND	yswritefile ${TOSV11L10ISO} 0 ${BOOTSECTOR}
)
add_custom_target(TownsOSV11L10BootSectorUpdate DEPENDS ${TOSV11L10ISO})
add_dependencies(dummy TownsOSV11L10BootSectorUpdate)


add_custom_command(
	OUTPUT ${TOSV21L20ISO} 
	DEPENDS ${BOOTSECTOR}
	COMMAND	yswritefile ${TOSV21L20ISO} 0 ${BOOTSECTOR}
)
add_custom_target(TownsOSV21L20BootSectorUpdate DEPENDS ${TOSV21L20ISO})
add_dependencies(dummy TownsOSV21L20BootSectorUpdate)


add_custom_command(
	OUTPUT ${TOSV21L31ISO} 
	DEPENDS ${BOOTSECTOR}
	COMMAND	yswritefile ${TOSV21L31ISO} 0 ${BOOTSECTOR}
)
add_custom_target(TownsOSV21L31BootSectorUpdate DEPENDS ${TOSV21L31ISO})
add_dependencies(dummy TownsOSV21L31BootSectorUpdate)




add_test(
	NAME CDBOOTLOADER_START_MX
	COMMAND
		${TSUGARU_EXE}
		"${ROM_MX}"
		-SCSICD3
		"${CDIMAGE}"
		-BOOTKEY
		H3
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		8000:0000
		-DONTAUTOSAVECMOS
)

add_test(
	NAME CDBOOTLOADER_VIEWPOINT
	COMMAND
		${TSUGARU_EXE}
		"${ROM_MX}"
		-SCSICD3
		"${CDIMAGE}"
		-BOOTKEY
		H3
		-SCSICD5
		"${ISODIR}/VIEWPOINT.CUE"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:0017A367
		-DONTAUTOSAVECMOS
		-EVTLOG
		${CMAKE_CURRENT_SOURCE_DIR}/PADAPRESS5SEC.txt
)

add_test(
 	NAME AFTERBURNER2_FD_TO_SCSI_2F
	COMMAND
		${TSUGARU_EXE}
		"${ROM_2F}"
		-SCSICD6
		"${ISODIR}/AFTER_BURNER.CUE"
		-FD0
		"${FDIMAGE}"
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00007237
		-DONTAUTOSAVECMOS
)

add_test(
	NAME TownsOSV1.1L10_DIRECT_MX
	COMMAND
		${TSUGARU_EXE}
		"${ROM_MX}"
		-SCSICD3
		"${TOSV11L10ISO}"
		-BOOTKEY
		H3
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:000096B5
		-DONTAUTOSAVECMOS
)

add_test(
	NAME TownsOSV2.1L20_DIRECT_HR
	COMMAND
		${TSUGARU_EXE}
		"${ROM_HR}"
		-SCSICD3
		"${TOSV21L20ISO}"
		-BOOTKEY
		H3
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00023C5F
		-DONTAUTOSAVECMOS
)

add_test(
	NAME TownsOSV2.1L31_DIRECT_HR
	COMMAND
		${TSUGARU_EXE}
		"${ROM_HR}"
		-SCSICD3
		"${TOSV21L31ISO}"
		-BOOTKEY
		H3
		-DEBUG
		-UNITTEST
		-POWEROFFAT
		000C:00006920
		-DONTAUTOSAVECMOS
)
